# ibt_ros2_interfaces

./: .gitignore  CMakeLists.txt  README.md  generate_md.py  interface_definitions.md  package.xml
.github/actions/build_deb/: Dockerfile  entrypoint.sh
.github/workflows/: build.yml  release.yml
action/: Docking.action  MoveArm.action
move_arm_action_interface/: CMakeLists.txt  package.xml
move_arm_action_interface/action/: MoveArm.action
move_arm_action_interface/msg/: MoveReq.msg  PoseRPY.msg
msg/: MoveReq.msg  PoseRPY.msg  PoseRPYStamped.msg  Waypoint.msg
srv/: GetAttrAll.srv  GetInput.srv  SetAttrAll.srv  SetOutput.srv  Vacuum.srv
